--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_API_BASE_URL=https://gateway.marvel.com
-REACT_API_KEY_PUBLIC=
-REACT_API_KEY_PRIVATE=
+REACT_API_BASE_URL= https://gateway.marvel.com
+REACT_API_KEY_PUBLIC= 1febd6e5e6cc0e4a37c92d3a164f758b
+REACT_API_KEY_PRIVATE= fb4738778fcaa571321fd223b4e2f9901c16711d
